--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         <div class="footer-button">
           <p class="footer-form-text">Subscribe</p>
           <form class="footer-form"></form>
-          <label aria-label="footer email input">
+          <label aria-label="footer email input" class="footer-wrap">
             <input
               type="email"
               name="footer-main"
@@ -428,10 +428,12 @@
               placeholder="E-mail"
             />
           </label>
-          <button type="submit" class="footer-btn btn">Subscribe</button>
-          <svg class="footer-icon-btn" width="24" height="24">
-            <use href="./images/icons.svg#icon-Frame"></use>
-          </svg>
+          <button type="submit" class="footer-btn btn">
+            Subscribe
+            <svg class="footer-icon-btn" width="24" height="24">
+              <use href="./images/icons.svg#icon-Frame"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
