--- a/portfolio.html
+++ b/portfolio.html
@@ -324,19 +324,22 @@
         </div>
         <div class="footer-button">
           <p class="footer-form-text">Subscribe</p>
-          <form class="footer-form"></form>
-          <label aria-label="footer email input">
-            <input
-              type="email"
-              name="footer-main"
-              class="footer-input"
-              placeholder="E-mail"
-            />
-          </label>
-          <button type="submit" class="footer-btn btn">Subscribe</button>
-          <svg class="footer-icon-btn" width="24" height="24">
-            <use href="./images/icons.svg#icon-Frame"></use>
-          </svg>
+          <form class="footer-form">
+            <label aria-label="footer email input" class="footer-wrap">
+              <input
+                type="email"
+                name="footer-main"
+                class="footer-input"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-btn btn">
+              Subscribe
+              <svg class="footer-icon-btn" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
