--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
-            <label for="user-name" class="modal-label">Name*</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="modal-input-wrap">
               <input
                 type="text"
@@ -458,13 +458,13 @@
                 required
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
             </div>
           </div>
           <div class="modal-field">
-            <label for="user-phone" class="modal-label">Phone*</label>
+            <label for="user-phone" class="modal-label">Phone</label>
             <div class="modal-input-wrap">
               <input
                 type="tel"
@@ -495,10 +495,10 @@
             </div>
           </div>
           <div class="modal-field">
-            <label for="user-text" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-comment"
               placeholder="Text input"
             ></textarea>
@@ -506,14 +506,14 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              id="policy"
-              name="policy"
+              id="user-privacy"
+              name="user-privacy"
               value="true"
               class="modal-check visually-hidden"
             />
-            <label for="policy" class="modal-check-text">
-              <span>
-                <svg class="check-icon" width="10" height="10">
+            <label for="user-privacy" class="modal-check-text">
+              <span class="modal-check-wrap">
+                <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
               </span>
