--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <button type="submit" class="footer-btn btn">
               Subscribe
               <svg class="footer-icon-btn" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-icon-teleg-1"></use>
               </svg>
             </button>
           </form>
@@ -441,8 +441,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="modal-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-btn"></use>
+          <svg class="modal-icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-btn-1""></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -490,7 +490,7 @@
                 id="user-email"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email"></use>
+                <use href="./images/icons.svg#icon-email-1"></use>
               </svg>
             </div>
           </div>
@@ -518,7 +518,7 @@
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a href="" class="modal-check-link">Privacy Policy</a>
+              <a href="" class="modal-check-link"> Privacy Policy</a>
             </label>
           </div>
           <button type="submit" class="modal-form-btn">Send</button>
