--- a/index.html
+++ b/index.html
@@ -438,11 +438,12 @@
         </div>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-icon-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-btn-1""></use>
+            <use href="./images/icons.svg#icon-close-btn-1"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -494,7 +495,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-close">
             <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
@@ -503,7 +504,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-link">
             <input
               type="checkbox"
               id="user-privacy"
